--- a/Office_Rentals/Office_Rentals/notebooks/Scraping_icasa_data.ipynb
+++ b/Office_Rentals/Office_Rentals/notebooks/Scraping_icasa_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "33905d7d",
+   "id": "e671ea22",
    "metadata": {},
    "source": [
     "# Importamos las libreriras necesarias para hacer el scraping"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "6aedbf08",
+   "id": "6dbff38f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e0e765",
+   "id": "534862ea",
    "metadata": {},
    "source": [
     "## Ahora empezamos hacer el Scraping\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dcebd884",
+   "id": "9bce7544",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0ee1aa66",
+   "id": "155d01c0",
    "metadata": {},
    "source": [
     "### Empezamos la extracion de los datos"
@@ -61,15 +61,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "76e4dd5d",
+   "execution_count": 25,
+   "id": "5e5d1e7b",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Oficina en Renta Av. Constitución No\\n, Acapulco De Juárez Centro, Acapulco De Juárez', '\\t\\t\\t\\t200 MX$\\t\\t\\t', 'Oficina en Renta Av. Constitución No\\n, Acapulco De Juárez Centro, Acapulco De Juárez', 'CARACTERÍSTICAS\\n Pisos: 2\\n Alturas: 4 metros.\\n Estacionamientos públicos cercanos.\\n Escaleras de servicio.\\n Baños por nivel...', '\\n \\n']\n"
+      "('Oficina en Renta Av. Constitución No\\n, Acapulco De Juárez Centro, Acapulco De Juárez', '\\t\\t\\t\\t200 MX$\\t\\t\\t', 'Oficina en Renta Av. Constitución No\\n, Acapulco De Juárez Centro, Acapulco De Juárez', 'CARACTERÍSTICAS\\n Pisos: 2\\n Alturas: 4 metros.\\n Estacionamientos públicos cercanos.\\n Escaleras de servicio.\\n Baños por nivel...', '\\n \\n')\n"
      ]
     }
    ],
@@ -88,38 +88,38 @@
     "    \n",
     "#Devolvemos los datos\n",
     "\n",
-    "datos = [title, price, detailredirection, description, adCharacteristics]\n",
+    "datos = (title, price, detailredirection, description, adCharacteristics)\n",
     "print(datos)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "c9ab1261",
+   "execution_count": 30,
+   "id": "91159ea0",
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'r' is not defined",
+     "ename": "TypeError",
+     "evalue": "'tuple' object is not callable",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10184/2593837691.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_icasa.csv'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mr\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[0md\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwrite\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[0md\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'r' is not defined"
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_10184/3144048125.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'data_icasa.csv'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'w'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      2\u001b[0m     \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriter\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 3\u001b[1;33m     \u001b[0mw\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwriterows\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdatos\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtuple\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object is not callable"
      ]
     }
    ],
    "source": [
-    "with open('data_icasa.csv', r) as f:\n",
-    "    d = csv.write(f)\n",
-    "    d.writerows(datos())"
+    "with open('data_icasa.csv','w') as f:\n",
+    "    w = csv.writer(f)\n",
+    "    w.writerows(datos().tuple())"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "aae3b5e5",
+   "id": "cd5361b3",
    "metadata": {},
    "outputs": [],
    "source": []
